chore: mover imagens para assets/ e atualizar paths

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
     <section id="telas" class="section surface">
       <h2 class="visually-hidden">Lista de telas</h2>
       <div class="grid cards">
-        <article class="card"><a href="page1.html"><figure><img src="./pages_images/page1.png" alt="Prévia da tela 1" loading="lazy"><figcaption>Tela 1</figcaption></figure></a></article>
-        <article class="card"><a href="page2.html"><figure><img src="./pages_images/page2.png" alt="Prévia da tela 2" loading="lazy"><figcaption>Tela 2</figcaption></figure></a></article>
-        <article class="card"><a href="page3.html"><figure><img src="./pages_images/page3.png" alt="Prévia da tela 3" loading="lazy"><figcaption>Tela 3</figcaption></figure></a></article>
-        <article class="card"><a href="page4.html"><figure><img src="./pages_images/page4.png" alt="Prévia da tela 4" loading="lazy"><figcaption>Tela 4</figcaption></figure></a></article>
-        <article class="card"><a href="page5.html"><figure><img src="./pages_images/page5.png" alt="Prévia da tela 5" loading="lazy"><figcaption>Tela 5</figcaption></figure></a></article>
-        <article class="card"><a href="page6.html"><figure><img src="./pages_images/page6.png" alt="Prévia da tela 6" loading="lazy"><figcaption>Tela 6</figcaption></figure></a></article>
-        <article class="card"><a href="page7.html"><figure><img src="./pages_images/page7.png" alt="Prévia da tela 7" loading="lazy"><figcaption>Tela 7</figcaption></figure></a></article>
-        <article class="card"><a href="page8.html"><figure><img src="./pages_images/page8.png" alt="Prévia da tela 8" loading="lazy"><figcaption>Tela 8</figcaption></figure></a></article>
-        <article class="card"><a href="page9.html"><figure><img src="./pages_images/page9.png" alt="Prévia da tela 9" loading="lazy"><figcaption>Tela 9</figcaption></figure></a></article>
-        <article class="card"><a href="page10.html"><figure><img src="./pages_images/page10.png" alt="Prévia da tela 10" loading="lazy"><figcaption>Tela 10</figcaption></figure></a></article>
-        <article class="card"><a href="page11.html"><figure><img src="./pages_images/page11.png" alt="Prévia da tela 11" loading="lazy"><figcaption>Tela 11</figcaption></figure></a></article>
-        <article class="card"><a href="page12.html"><figure><img src="./pages_images/page12.png" alt="Prévia da tela 12" loading="lazy"><figcaption>Tela 12</figcaption></figure></a></article>
-        <article class="card"><a href="page13.html"><figure><img src="./pages_images/page13.png" alt="Prévia da tela 13" loading="lazy"><figcaption>Tela 13</figcaption></figure></a></article>
-        <article class="card"><a href="page14.html"><figure><img src="./pages_images/page14.png" alt="Prévia da tela 14" loading="lazy"><figcaption>Tela 14</figcaption></figure></a></article>
+        <article class="card"><a href="page1.html"><figure><img src="./assets/page1.png" alt="Prévia da tela 1" loading="lazy"><figcaption>Tela 1</figcaption></figure></a></article>
+        <article class="card"><a href="page2.html"><figure><img src="./assets/page2.png" alt="Prévia da tela 2" loading="lazy"><figcaption>Tela 2</figcaption></figure></a></article>
+        <article class="card"><a href="page3.html"><figure><img src="./assets/page3.png" alt="Prévia da tela 3" loading="lazy"><figcaption>Tela 3</figcaption></figure></a></article>
+        <article class="card"><a href="page4.html"><figure><img src="./assets/page4.png" alt="Prévia da tela 4" loading="lazy"><figcaption>Tela 4</figcaption></figure></a></article>
+        <article class="card"><a href="page5.html"><figure><img src="./assets/page5.png" alt="Prévia da tela 5" loading="lazy"><figcaption>Tela 5</figcaption></figure></a></article>
+        <article class="card"><a href="page6.html"><figure><img src="./assets/page6.png" alt="Prévia da tela 6" loading="lazy"><figcaption>Tela 6</figcaption></figure></a></article>
+        <article class="card"><a href="page7.html"><figure><img src="./assets/page7.png" alt="Prévia da tela 7" loading="lazy"><figcaption>Tela 7</figcaption></figure></a></article>
+        <article class="card"><a href="page8.html"><figure><img src="./assets/page8.png" alt="Prévia da tela 8" loading="lazy"><figcaption>Tela 8</figcaption></figure></a></article>
+        <article class="card"><a href="page9.html"><figure><img src="./assets/page9.png" alt="Prévia da tela 9" loading="lazy"><figcaption>Tela 9</figcaption></figure></a></article>
+        <article class="card"><a href="page10.html"><figure><img src="./assets/page10.png" alt="Prévia da tela 10" loading="lazy"><figcaption>Tela 10</figcaption></figure></a></article>
+        <article class="card"><a href="page11.html"><figure><img src="./assets/page11.png" alt="Prévia da tela 11" loading="lazy"><figcaption>Tela 11</figcaption></figure></a></article>
+        <article class="card"><a href="page12.html"><figure><img src="./assets/page12.png" alt="Prévia da tela 12" loading="lazy"><figcaption>Tela 12</figcaption></figure></a></article>
+        <article class="card"><a href="page13.html"><figure><img src="./assets/page13.png" alt="Prévia da tela 13" loading="lazy"><figcaption>Tela 13</figcaption></figure></a></article>
+        <article class="card"><a href="page14.html"><figure><img src="./assets/page14.png" alt="Prévia da tela 14" loading="lazy"><figcaption>Tela 14</figcaption></figure></a></article>
       </div>
     </section>
 
