--- a/page14.html
+++ b/page14.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page14.png" alt="Imagem de referência da Tela 14" />
+        <img src="./assets/page14.png" alt="Imagem de referência da Tela 14" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
