--- a/page6.html
+++ b/page6.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page6.png" alt="Imagem de referência da Tela 6" />
+        <img src="./assets/page6.png" alt="Imagem de referência da Tela 6" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
