--- a/page9.html
+++ b/page9.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page9.png" alt="Imagem de referência da Tela 9" />
+        <img src="./assets/page9.png" alt="Imagem de referência da Tela 9" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
