--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         <article class="card">
           <a href="page1.html">
             <figure>
-              <img src="./pages_images/page1.png" alt="Prévia da tela 1" loading="lazy" />
+              <img src="./assets/page1.png" alt="Prévia da tela 1" loading="lazy" />
               <figcaption> Tela 1 </figcaption>
             </figure>
           </a>
@@ -47,7 +47,7 @@
         <article class="card">
           <a href="page2.html">
             <figure>
-              <img src="./pages_images/page2.png" alt="Prévia da tela 2" loading="lazy" />
+              <img src="./assets/page2.png" alt="Prévia da tela 2" loading="lazy" />
               <figcaption> Tela 2 </figcaption>
             </figure>
           </a>
@@ -55,7 +55,7 @@
         <article class="card">
           <a href="page3.html">
             <figure>
-              <img src="./pages_images/page3.png" alt="Prévia da tela 3" loading="lazy" />
+              <img src="./assets/page3.png" alt="Prévia da tela 3" loading="lazy" />
               <figcaption> Tela 3 </figcaption>
             </figure>
           </a>
@@ -63,7 +63,7 @@
         <article class="card">
           <a href="page4.html">
             <figure>
-              <img src="./pages_images/page4.png" alt="Prévia da tela 4" loading="lazy" />
+              <img src="./assets/page4.png" alt="Prévia da tela 4" loading="lazy" />
               <figcaption> Tela 4 </figcaption>
             </figure>
           </a>
@@ -71,7 +71,7 @@
         <article class="card">
           <a href="page5.html">
             <figure>
-              <img src="./pages_images/page5.png" alt="Prévia da tela 5" loading="lazy" />
+              <img src="./assets/page5.png" alt="Prévia da tela 5" loading="lazy" />
               <figcaption> Tela 5 </figcaption>
             </figure>
           </a>
@@ -79,7 +79,7 @@
         <article class="card">
           <a href="page6.html">
             <figure>
-              <img src="./pages_images/page6.png" alt="Prévia da tela 6" loading="lazy" />
+              <img src="./assets/page6.png" alt="Prévia da tela 6" loading="lazy" />
               <figcaption> Tela 6 </figcaption>
             </figure>
           </a>
@@ -87,7 +87,7 @@
         <article class="card">
           <a href="page7.html">
             <figure>
-              <img src="./pages_images/page7.png" alt="Prévia da tela 7" loading="lazy" />
+              <img src="./assets/page7.png" alt="Prévia da tela 7" loading="lazy" />
               <figcaption> Tela 7 </figcaption>
             </figure>
           </a>
@@ -95,7 +95,7 @@
         <article class="card">
           <a href="page8.html">
             <figure>
-              <img src="./pages_images/page8.png" alt="Prévia da tela 8" loading="lazy" />
+              <img src="./assets/page8.png" alt="Prévia da tela 8" loading="lazy" />
               <figcaption> Tela 8 </figcaption>
             </figure>
           </a>
@@ -103,7 +103,7 @@
         <article class="card">
           <a href="page9.html">
             <figure>
-              <img src="./pages_images/page9.png" alt="Prévia da tela 9" loading="lazy" />
+              <img src="./assets/page9.png" alt="Prévia da tela 9" loading="lazy" />
               <figcaption> Tela 9 </figcaption>
             </figure>
           </a>
@@ -111,7 +111,7 @@
         <article class="card">
           <a href="page10.html">
             <figure>
-              <img src="./pages_images/page10.png" alt="Prévia da tela 10" loading="lazy" />
+              <img src="./assets/page10.png" alt="Prévia da tela 10" loading="lazy" />
               <figcaption> Tela 10 </figcaption>
             </figure>
           </a>
@@ -119,7 +119,7 @@
         <article class="card">
           <a href="page11.html">
             <figure>
-              <img src="./pages_images/page11.png" alt="Prévia da tela 11" loading="lazy" />
+              <img src="./assets/page11.png" alt="Prévia da tela 11" loading="lazy" />
               <figcaption> Tela 11 </figcaption>
             </figure>
           </a>
@@ -127,7 +127,7 @@
         <article class="card">
           <a href="page12.html">
             <figure>
-              <img src="./pages_images/page12.png" alt="Prévia da tela 12" loading="lazy" />
+              <img src="./assets/page12.png" alt="Prévia da tela 12" loading="lazy" />
               <figcaption> Tela 12 </figcaption>
             </figure>
           </a>
@@ -135,7 +135,7 @@
         <article class="card">
           <a href="page13.html">
             <figure>
-              <img src="./pages_images/page13.png" alt="Prévia da tela 13" loading="lazy" />
+              <img src="./assets/page13.png" alt="Prévia da tela 13" loading="lazy" />
               <figcaption> Tela 13 </figcaption>
             </figure>
           </a>
@@ -143,7 +143,7 @@
         <article class="card">
           <a href="page14.html">
             <figure>
-              <img src="./pages_images/page14.png" alt="Prévia da tela 14" loading="lazy" />
+              <img src="./assets/page14.png" alt="Prévia da tela 14" loading="lazy" />
               <figcaption> Tela 14 </figcaption>
             </figure>
           </a>
