--- a/page1.html
+++ b/page1.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page1.png" alt="Imagem de referência da Tela 1" />
+        <img src="./assets/page1.png" alt="Imagem de referência da Tela 1" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
