--- a/page10.html
+++ b/page10.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page10.png" alt="Imagem de referência da Tela 10" />
+        <img src="./assets/page10.png" alt="Imagem de referência da Tela 10" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
