--- a/page11.html
+++ b/page11.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page11.png" alt="Imagem de referência da Tela 11" />
+        <img src="./assets/page11.png" alt="Imagem de referência da Tela 11" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
