--- a/page12.html
+++ b/page12.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page12.png" alt="Imagem de referência da Tela 12" />
+        <img src="./assets/page12.png" alt="Imagem de referência da Tela 12" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
