--- a/page2.html
+++ b/page2.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page2.png" alt="Imagem de referência da Tela 2" />
+        <img src="./assets/page2.png" alt="Imagem de referência da Tela 2" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
