--- a/page3.html
+++ b/page3.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page3.png" alt="Imagem de referência da Tela 3" />
+        <img src="./assets/page3.png" alt="Imagem de referência da Tela 3" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
