--- a/page7.html
+++ b/page7.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page7.png" alt="Imagem de referência da Tela 7" />
+        <img src="./assets/page7.png" alt="Imagem de referência da Tela 7" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
