--- a/page8.html
+++ b/page8.html
@@ -34,7 +34,7 @@
     <details class="section">
       <summary>Ver imagem de referência</summary>
       <figure>
-        <img src="./pages_images/page8.png" alt="Imagem de referência da Tela 8" />
+        <img src="./assets/page8.png" alt="Imagem de referência da Tela 8" />
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
