fix(navbar): padroniza HABITAT e remove navegação inferior

--- a/home.html
+++ b/home.html
@@ -16,14 +16,21 @@
 
   <header class="site-header">
     <div class="container inner">
-      <div class="brand">Interface Mockups</div>
+      <div class="brand">HABITAT</div>
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="#telas">Telas</a></li>
-          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#telas">Páginas</a></li>
+          <li><a href="#destaques">Destaques</a></li>
+          <li><a href="#assinar">Assinar</a></li>
+          <li><a href="#admin">Admin</a></li>
         </ul>
       </nav>
+      <div class="header-actions">
+        <input class="search-input" type="search" placeholder="Buscar..." aria-label="Buscar" />
+        <a class="btn btn--outline" href="#buscar">Buscar</a>
+        <a class="btn btn--outline" href="#entrar">Entrar</a>
+      </div>
     </div>
   </header>
 
