--- a/page1.html
+++ b/page1.html
@@ -15,13 +15,21 @@
 
   <header class="site-header">
     <div class="container inner">
-      <div class="brand"><a href="index.html">Interface Mockups</a></div>
+      <div class="brand">HABITAT</div>
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="page1.html" aria-current="page">Tela 1</a></li>
+          <li><a href="#paginas">Páginas</a></li>
+          <li><a href="#destaques">Destaques</a></li>
+          <li><a href="#assinar">Assinar</a></li>
+          <li><a href="#admin">Admin</a></li>
         </ul>
       </nav>
+      <div class="header-actions">
+        <input class="search-input" type="search" placeholder="Buscar..." aria-label="Buscar" />
+        <a class="btn btn--outline" href="#buscar">Buscar</a>
+        <a class="btn btn--outline" href="#entrar">Entrar</a>
+      </div>
     </div>
   </header>
 
@@ -111,13 +119,6 @@
         <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
       </figure>
     </details>
-    <nav class="section" aria-label="Paginação de telas">
-      <div class="cluster">
-        <a href="page14.html">← Anterior</a>
-        <a href="index.html">Início</a>
-        <a href="page2.html">Próxima →</a>
-      </div>
-    </nav>
   </main>
 
   <footer class="site-footer">
