feat(page2): listagem de categoria (filtros, grid 3 colunas, load more, chips)

--- a/page2.html
+++ b/page2.html
@@ -34,10 +34,78 @@
   </header>
 
   <main id="conteudo" class="container section">
-    <h1>Tela 2</h1>
-    <article class="surface stack-md">
-      <p>Reprodução em HTML/CSS baseada no mockup da Tela 2.</p>
-    </article>
+    <h1>Categoria: Techno</h1>
+    <div class="filters" aria-label="Filtros">
+      <span class="filter">Popular</span>
+      <span class="filter">Mais recentes</span>
+      <span class="filter">IA</span>
+      <span class="filter">Produtividade</span>
+    </div>
+
+    <section class="section">
+      <div class="card-grid">
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 1</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 2</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 3</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 4</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 5</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 6</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 7</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 8</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+        <article class="grid-card">
+          <div class="thumb-lg" aria-hidden="true"></div>
+          <h3>Título da Postagem 9</h3>
+          <div class="post-meta muted">31 Jul 2025</div>
+        </article>
+      </div>
+      <div class="center">
+        <a class="btn btn--outline load-more" href="#">Carregar mais</a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="chips">
+        <span class="chip">Instagram</span>
+        <span class="chip">Work</span>
+        <span class="chip">Bags</span>
+        <span class="chip">Lamp</span>
+        <span class="chip">Books</span>
+      </div>
+    </section>
 
     <details class="section">
       <summary>Ver imagem de referência</summary>
