feat(page3): grade de destaques (3x3) conforme mockup

--- a/page3.html
+++ b/page3.html
@@ -34,10 +34,30 @@
   </header>
 
   <main id="conteudo" class="container section">
-    <h1>Tela 3</h1>
-    <article class="surface stack-md">
-      <p>Reprodução em HTML/CSS baseada no mockup da Tela 3.</p>
-    </article>
+    <h1>Destaques</h1>
+    <section class="section">
+      <div class="card-grid">
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 1</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 2</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 3</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 4</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 5</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 6</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 7</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 8</h3></article>
+        <article class="grid-card"><div class="thumb-lg" aria-hidden="true"></div><h3>Destaque 9</h3></article>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="chips">
+        <span class="chip">Instagram</span>
+        <span class="chip">Work</span>
+        <span class="chip">Bags</span>
+        <span class="chip">Lamp</span>
+        <span class="chip">Books</span>
+      </div>
+    </section>
 
     <details class="section">
       <summary>Ver imagem de referência</summary>
