fix: corrige links do index.html e adiciona package.json para servidor local

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
     <section id="telas" class="section surface">
       <h2 class="visually-hidden">Lista de telas</h2>
       <div class="grid cards">
-        <article class="card"><a href="page1.html"><figure><img src="./assets/page1.png" alt="Prévia da tela 1" loading="lazy"><figcaption>Tela 1</figcaption></figure></a></article>
-        <article class="card"><a href="page2.html"><figure><img src="./assets/page2.png" alt="Prévia da tela 2" loading="lazy"><figcaption>Tela 2</figcaption></figure></a></article>
-        <article class="card"><a href="page3.html"><figure><img src="./assets/page3.png" alt="Prévia da tela 3" loading="lazy"><figcaption>Tela 3</figcaption></figure></a></article>
-        <article class="card"><a href="page4.html"><figure><img src="./assets/page4.png" alt="Prévia da tela 4" loading="lazy"><figcaption>Tela 4</figcaption></figure></a></article>
-        <article class="card"><a href="page5.html"><figure><img src="./assets/page5.png" alt="Prévia da tela 5" loading="lazy"><figcaption>Tela 5</figcaption></figure></a></article>
-        <article class="card"><a href="page6.html"><figure><img src="./assets/page6.png" alt="Prévia da tela 6" loading="lazy"><figcaption>Tela 6</figcaption></figure></a></article>
-        <article class="card"><a href="page7.html"><figure><img src="./assets/page7.png" alt="Prévia da tela 7" loading="lazy"><figcaption>Tela 7</figcaption></figure></a></article>
-        <article class="card"><a href="page8.html"><figure><img src="./assets/page8.png" alt="Prévia da tela 8" loading="lazy"><figcaption>Tela 8</figcaption></figure></a></article>
-        <article class="card"><a href="page9.html"><figure><img src="./assets/page9.png" alt="Prévia da tela 9" loading="lazy"><figcaption>Tela 9</figcaption></figure></a></article>
-        <article class="card"><a href="page10.html"><figure><img src="./assets/page10.png" alt="Prévia da tela 10" loading="lazy"><figcaption>Tela 10</figcaption></figure></a></article>
-        <article class="card"><a href="page11.html"><figure><img src="./assets/page11.png" alt="Prévia da tela 11" loading="lazy"><figcaption>Tela 11</figcaption></figure></a></article>
-        <article class="card"><a href="page12.html"><figure><img src="./assets/page12.png" alt="Prévia da tela 12" loading="lazy"><figcaption>Tela 12</figcaption></figure></a></article>
-        <article class="card"><a href="page13.html"><figure><img src="./assets/page13.png" alt="Prévia da tela 13" loading="lazy"><figcaption>Tela 13</figcaption></figure></a></article>
-        <article class="card"><a href="page14.html"><figure><img src="./assets/page14.png" alt="Prévia da tela 14" loading="lazy"><figcaption>Tela 14</figcaption></figure></a></article>
+        <article class="card"><a href="home-page.html"><figure><img src="./assets/page1.png" alt="Prévia da home" loading="lazy"><figcaption>Home</figcaption></figure></a></article>
+        <article class="card"><a href="categoria-techno.html"><figure><img src="./assets/page2.png" alt="Prévia da categoria Techno" loading="lazy"><figcaption>Categoria Techno</figcaption></figure></a></article>
+        <article class="card"><a href="destaques.html"><figure><img src="./assets/page3.png" alt="Prévia dos destaques" loading="lazy"><figcaption>Destaques</figcaption></figure></a></article>
+        <article class="card"><a href="admin.html"><figure><img src="./assets/page4.png" alt="Prévia do admin" loading="lazy"><figcaption>Admin Dashboard</figcaption></figure></a></article>
+        <article class="card"><a href="escolhas-editor.html"><figure><img src="./assets/page5.png" alt="Prévia das escolhas do editor" loading="lazy"><figcaption>Escolhas do Editor</figcaption></figure></a></article>
+        <article class="card"><a href="categorias.html"><figure><img src="./assets/page6.png" alt="Prévia das categorias" loading="lazy"><figcaption>Categorias</figcaption></figure></a></article>
+        <article class="card"><a href="criar-post.html"><figure><img src="./assets/page7.png" alt="Prévia do criar post" loading="lazy"><figcaption>Criar Post</figcaption></figure></a></article>
+        <article class="card"><a href="newsletter.html"><figure><img src="./assets/page8.png" alt="Prévia da newsletter" loading="lazy"><figcaption>Newsletter</figcaption></figure></a></article>
+        <article class="card"><a href="signup.html"><figure><img src="./assets/page9.png" alt="Prévia do cadastro" loading="lazy"><figcaption>Criar Conta</figcaption></figure></a></article>
+        <article class="card"><a href="login.html"><figure><img src="./assets/page10.png" alt="Prévia do login" loading="lazy"><figcaption>Entrar</figcaption></figure></a></article>
+        <article class="card"><a href="page11.html"><figure><img src="./assets/page11.png" alt="Prévia da tela 11" loading="lazy"><figcaption>Fila de Revisão</figcaption></figure></a></article>
+        <article class="card"><a href="page12.html"><figure><img src="./assets/page12.png" alt="Prévia da tela 12" loading="lazy"><figcaption>Fila de Comentários</figcaption></figure></a></article>
+        <article class="card"><a href="page13.html"><figure><img src="./assets/page13.png" alt="Prévia da tela 13" loading="lazy"><figcaption>Usuários</figcaption></figure></a></article>
+        <article class="card"><a href="page14.html"><figure><img src="./assets/page14.png" alt="Prévia da tela 14" loading="lazy"><figcaption>Perfil/Busca</figcaption></figure></a></article>
       </div>
     </section>
 
