--- a/destaques.html
+++ b/destaques.html
@@ -19,7 +19,7 @@
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="#paginas">Páginas</a></li>
+          <li><a href="navegacao.html">Páginas</a></li>
           <li><a href="#destaques">Destaques</a></li>
           <li><a href="#assinar">Assinar</a></li>
           <li><a href="#admin">Admin</a></li>
