feat: implementa páginas restantes (fila-revisao, fila-comentarios, usuarios, perfil, busca)

--- a/navegacao.html
+++ b/navegacao.html
@@ -53,10 +53,11 @@
         <article class="card"><a href="newsletter.html"><figure><img src="./assets/page8.png" alt="Prévia da newsletter" loading="lazy"><figcaption>Newsletter</figcaption></figure></a></article>
         <article class="card"><a href="signup.html"><figure><img src="./assets/page9.png" alt="Prévia do cadastro" loading="lazy"><figcaption>Criar Conta</figcaption></figure></a></article>
         <article class="card"><a href="login.html"><figure><img src="./assets/page10.png" alt="Prévia do login" loading="lazy"><figcaption>Entrar</figcaption></figure></a></article>
-        <article class="card"><a href="page11.html"><figure><img src="./assets/page11.png" alt="Prévia da tela 11" loading="lazy"><figcaption>Fila de Revisão</figcaption></figure></a></article>
-        <article class="card"><a href="page12.html"><figure><img src="./assets/page12.png" alt="Prévia da tela 12" loading="lazy"><figcaption>Fila de Comentários</figcaption></figure></a></article>
-        <article class="card"><a href="page13.html"><figure><img src="./assets/page13.png" alt="Prévia da tela 13" loading="lazy"><figcaption>Usuários</figcaption></figure></a></article>
-        <article class="card"><a href="page14.html"><figure><img src="./assets/page14.png" alt="Prévia da tela 14" loading="lazy"><figcaption>Perfil/Busca</figcaption></figure></a></article>
+        <article class="card"><a href="fila-revisao.html"><figure><img src="./assets/page11.png" alt="Prévia da fila de revisão" loading="lazy"><figcaption>Fila de Revisão</figcaption></figure></a></article>
+        <article class="card"><a href="fila-comentarios.html"><figure><img src="./assets/page12.png" alt="Prévia da fila de comentários" loading="lazy"><figcaption>Fila de Comentários</figcaption></figure></a></article>
+        <article class="card"><a href="usuarios.html"><figure><img src="./assets/page13.png" alt="Prévia dos usuários" loading="lazy"><figcaption>Usuários</figcaption></figure></a></article>
+        <article class="card"><a href="perfil.html"><figure><img src="./assets/page14.png" alt="Prévia do perfil" loading="lazy"><figcaption>Perfil</figcaption></figure></a></article>
+        <article class="card"><a href="busca.html"><figure><img src="./assets/page14.png" alt="Prévia da busca" loading="lazy"><figcaption>Busca</figcaption></figure></a></article>
       </div>
     </section>
 
