--- a/home.html
+++ b/home.html
@@ -20,10 +20,10 @@
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="#telas">Páginas</a></li>
-          <li><a href="#destaques">Destaques</a></li>
-          <li><a href="#assinar">Assinar</a></li>
-          <li><a href="#admin">Admin</a></li>
+          <li><a href="navegacao.html">Páginas</a></li>
+          <li><a href="destaques.html">Destaques</a></li>
+          <li><a href="newsletter.html">Assinar</a></li>
+          <li><a href="admin.html">Admin</a></li>
         </ul>
       </nav>
       <div class="header-actions">
