--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
       <nav class="primary-nav" aria-label="Navegação principal">
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="#paginas">Páginas</a></li>
+          <li><a href="navegacao.html">Páginas</a></li>
           <li><a href="destaques.html">Destaques</a></li>
           <li><a href="newsletter.html">Assinar</a></li>
           <li><a href="admin.html">Admin</a></li>
