fix: update links to point to correct HTML files for login and newsletter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="header-actions">
         <input class="search-input" type="search" placeholder="Buscar..." aria-label="Buscar" />
         <a class="btn btn--outline" href="#buscar">Buscar</a>
-        <a class="btn btn--outline" href="#entrar">Entrar</a>
+        <a class="btn btn--outline" href="login.html">Entrar</a>
       </div>
     </div>
   </header>
@@ -40,7 +40,7 @@
         <p class="muted">Descubra conteúdos por categorias, posts em destaque e as escolhas do editor.</p>
         <div class="cluster" style="margin-top: var(--space-md)">
           <a class="btn btn--primary" href="#categorias">Explorar categorias</a>
-          <a class="btn btn--outline" href="#newsletter">Assine a newsletter</a>
+          <a class="btn btn--outline" href="newsletter.html">Assine a newsletter</a>
         </div>
       </div>
       <div class="hero-media" aria-hidden="true"></div>
