--- a/index.html
+++ b/index.html
@@ -111,19 +111,11 @@
         <span class="chip">Books</span>
       </div>
     </section>
-
-    <details class="section">
-      <summary>Ver imagem de referência</summary>
-      <figure>
-        <img src="./assets/page1.png" alt="Imagem de referência da Tela 1" />
-        <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
-      </figure>
-    </details>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <small>Tela 1</small>
+      <small>© 2025 Meu Site • Meu site</small>
     </div>
   </footer>
 </body>
