--- a/destaques.html
+++ b/destaques.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tela 3</title>
+  <title>Destaques - HABITAT</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -58,19 +58,11 @@
         <span class="chip">Books</span>
       </div>
     </section>
-
-    <details class="section">
-      <summary>Ver imagem de referência</summary>
-      <figure>
-        <img src="./assets/page3.png" alt="Imagem de referência da Tela 3" />
-        <figcaption>Imagem de referência — não faz parte do layout final.</figcaption>
-      </figure>
-    </details>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <small>Tela 3</small>
+      <small>© 2025 Meu Site • Meu site</small>
     </div>
   </footer>
 </body>
