fix: atualizar links de navegação para a página de login e ajustar layout responsivo

--- a/criar-post.html
+++ b/criar-post.html
@@ -79,7 +79,7 @@
                 <label for="conteudo">Conteúdo</label>
                 <textarea id="conteudo" name="conteudo" rows="10" placeholder="Escreva aqui... (editor simulado)"></textarea>
               </div>
-              <div style="display: grid; grid-template-columns: 1fr 1fr; gap: var(--space-lg); margin-bottom: var(--space-lg);">
+              <div class="form-grid">
                 <input type="text" placeholder="Categorias e tags" />
                 <input type="text" placeholder="Upload da imagem de capa" />
               </div>
