--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
       <div class="header-actions">
         <input class="search-input" type="search" placeholder="Buscar..." aria-label="Buscar" />
         <a class="btn btn--outline" href="#buscar">Buscar</a>
-        <a class="btn btn--outline" href="#entrar">Entrar</a>
+        <a class="btn btn--outline" href="login.html">Entrar</a>
       </div>
     </div>
   </header>
